pod-security/baseline/restrict-apparmor-profiles/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    oof.org.io/foo: bar
    container.apparmor.security.beta.kubernetes.io/busybox01: bar/foo
  name: badpod01
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    container.apparmor.security.beta.kubernetes.io/busybox01: foo/bar
    oof.org.io/foo: bar
  name: badpod02
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
