pod-security/baseline/restrict-apparmor-profiles/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    oof.org.io/foo: bar
    container.apparmor.security.beta.kubernetes.io/busybox01: runtime/default
  name: goodpod01
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    container.apparmor.security.beta.kubernetes.io/busybox01: localhost/foo
    oof.org.io/foo: bar
  name: goodpod02
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
