pod-security/baseline/restrict-apparmor-profiles/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-apparmor-profiles
status:
  ready: true
